@@ -47,11 +47,13 @@ option(ENABLE_FFMPEG "Enable ffmpeg/libav libraries (required for replaygain cal
 option(ENABLE_MPG123 "Enable mpg123 libraries (required for replaygain calculation)" ON)
 option(ENABLE_PROXY_CONFIG "Enable proxy config in settings dialog" OFF)
 option(ENABLE_HTTP_SERVER "Enable internal HTTP server to play non-MPD files" ON)
-if (WIN32 OR APPLE)
+if (WIN32 OR APPLE OR HAIKU)
     option(ENABLE_DEVICES_SUPPORT "Enable suport for external devices" OFF)
     option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" OFF)
 else ()
     option(ENABLE_DEVICES_SUPPORT "Enable suport for external devices" ON)
+    option(ENABLE_REMOTE_DEVICES "Enable support for remote (sshfs, samba) devices" ON)
+    option(ENABLE_UDISKS2 "Build UDisks2 backend, and NOT UDisks" ON)
     option(ENABLE_SIMPLE_MPD_SUPPORT "Enable support for simple (Cantata controlled) MPD" ON)
     option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" ON)
 endif ()
@@ -59,8 +61,6 @@ option(ENABLE_CDPARANOIA "Enable CDParanoia libraries (this or libCDIO_paranoia 
 option(ENABLE_CDIOPARANOIA "Enable libCDIO_paranoia libraries (this or CDParanoia required for AudioCD support)" ON)
 option(ENABLE_CDDB "Enable CDDB libraries (either this or MusicBrianz required for AudioCD support)" ON)
 option(ENABLE_MUSICBRAINZ "Enable MusicBrianz libraries (either this or CDDB required for AudioCD support)" ON)
-option(ENABLE_UDISKS2 "Build UDisks2 backend, and NOT UDisks, for Qt builds" ON)
-option(ENABLE_REMOTE_DEVICES "Enable support for remote (sshfs, samba) devices (EXPERIMENTAL)" OFF)
 option(ENABLE_MTP "Enable MTP library (required to support MTP devices)" ON)
 option(ENABLE_AVAHI "Enable automatic mpd server discovery" ${UNIX})
 
@@ -98,10 +98,8 @@ elseif (APPLE)
     set(MACOSX_BUNDLE_RESOURCES ${CANTATA_APP_CONTENTS_DIR}/Resources)
     set(MACOSX_BUNDLE_APP_DIR ${CANTATA_APP_CONTENTS_DIR}/MacOS)
     set(CANTATA_ICON_INSTALL_PREFIX ${MACOSX_BUNDLE_RESOURCES}/icons/cantata)
-else ()
-    if (NOT HAIKU)
-        set(CANTATA_ICON_INSTALL_PREFIX ${SHARE_INSTALL_PREFIX}/icons/hicolor)
-    endif ()
+elseif (NOT HAIKU)
+    set(CANTATA_ICON_INSTALL_PREFIX ${SHARE_INSTALL_PREFIX}/icons/hicolor)
 endif ()
 
 if (NOT WIN32 AND NOT APPLE AND ENABLE_DEVICES_SUPPORT AND ENABLE_UDISKS2)
@@ -684,30 +682,31 @@ endif ()
 
 macro_display_feature_log()
 
-if ((NOT ENABLE_DEVICES_SUPPORT AND NOT WIN32 AND NOT APPLE) OR (NOT ENABLE_HTTP_STREAM_PLAYBACK))
+if ( (NOT WIN32 AND NOT APPLE AND ( (NOT ENABLE_SIMPLE_MPD_SUPPORT)  OR (NOT ENABLE_DEVICES_SUPPORT) OR (ENABLE_DEVICES_SUPPORT AND NOT ENABLE_REMOTE_DEVICES) ) ) OR (NOT ENABLE_HTTP_STREAM_PLAYBACK) )
     message("-----------------------------------------------------------------------------")
     message("-- The following STANDARD options have been DISABLED.")
     message("-----------------------------------------------------------------------------")
-    if (NOT ENABLE_DEVICES_SUPPORT)
-        message("    * Devices Tab - Media device support (UMS, MTP, AudioCD).")
-    endif ()
+    if (NOT WIN32 AND NOT APPLE)
+        if (NOT ENABLE_SIMPLE_MPD_SUPPORT)
+	        message("    * Simple/Personal (Cantata controlled) MPD instance support")
+        endif()
+        if (NOT ENABLE_DEVICES_SUPPORT)
+            message("    * Devices Tab - Media device support (UMS, MTP, AudioCD).")
+        elseif (NOT ENABLE_REMOTE_DEVICES)
+            message("    * Remote Devices - Access sshfs, Samba, and local folders as devices. (EXPERIMENTAL)")
+        endif ()
+    endif()
     if (NOT ENABLE_HTTP_STREAM_PLAYBACK)
         message("    * MPD HTTP Streams - Playback MPD HTTP output stream via libVLC.")
     endif ()
     message("")
 endif ()
 
-if ((ENABLE_DEVICES_SUPPORT AND ENABLE_REMOTE_DEVICES) OR ENABLE_PROXY_CONFIG OR ((WIN32 OR APPLE) AND ENABLE_SIMPLE_MPD_SUPPORT))
+if (ENABLE_PROXY_CONFIG)
     message("-----------------------------------------------------------------------------")
     message("-- The following NON STANDARD options have been ENABLED.")
     message("-----------------------------------------------------------------------------")
     if (ENABLE_PROXY_CONFIG)
         message("    * Proxy Configuration")
     endif ()
-    if (ENABLE_REMOTE_DEVICES)
-        message("    * Remote Devices - Access sshfs, Samba, and local folders as devices. (EXPERIMENTAL)")
-    endif ()
-    if (ENABLE_SIMPLE_MPD_SUPPORT)
-	    message("    * Simple/Personal (Cantata controlled) MPD instance support")
-    endif()
 endif ()
